--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "^6.15.0",
     "@swc/core": "^1.9.2",
-    "@vitest/coverage-v8": "^2.1.4",
     "aws-sdk": "^2.1462.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -48,8 +48,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "unplugin-swc": "^1.5.1",
-    "vitest": "^2.1.4"
+    "unplugin-swc": "^1.5.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
@@ -58,26 +57,27 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@prisma/client": "^5.21.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
-    "husky": "^8.0.3",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vitest/coverage-v8": "^2.1.4",
+    "vitest": "^2.1.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "git-commit-msg-linter": "^4.9.4",
+    "husky": "^8.0.3",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^5.21.1",
+    "prisma": "^6.15.0",
     "source-map-support": "^0.5.20",
     "supertest": "^7.0.0",
     "ts-jest": "29.0.3",
@@ -120,3 +120,4 @@
     }
   }
 }
+
