--- a/.github/workflows/docker-image-merge.yml
+++ b/.github/workflows/docker-image-merge.yml
@@ -2,7 +2,7 @@ name: Docker Image CI for AWS
 
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
     paths-ignore:
       - '**/*.md'
 
