--- a/docker-compose-vm.yml
+++ b/docker-compose-vm.yml
@@ -11,15 +11,15 @@ services:
     environment:
       - TYPEORM_HOST=database_soujunior
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.mentores-backend.rule=Host(`mentores-backend.soujunior.tech`)"
-      - "traefik.http.routers.mentores-backend.entrypoints=websecure"
-      - "traefik.http.routers.mentores-backend.tls.certresolver=myresolver"
-      - "traefik.http.services.mentores-backend.loadbalancer.server.port=3003"
-      - "traefik.http.middlewares.traefik-headers.headers.sslredirect=true"
-      - "traefik.http.middlewares.traefik-headers.headers.sslforcehost=true"
-      - "traefik.http.middlewares.traefik-headers.headers.sslproxyheaders.X-Forwarded-Proto=https"
-      - "traefik.docker.network=traefik"
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.mentores-backend.rule=Host(`mentores-backend.soujunior.tech`)'
+      - 'traefik.http.routers.mentores-backend.entrypoints=websecure'
+      - 'traefik.http.routers.mentores-backend.tls.certresolver=myresolver'
+      - 'traefik.http.services.mentores-backend.loadbalancer.server.port=3003'
+      - 'traefik.http.middlewares.traefik-headers.headers.sslredirect=true'
+      - 'traefik.http.middlewares.traefik-headers.headers.sslforcehost=true'
+      - 'traefik.http.middlewares.traefik-headers.headers.sslproxyheaders.X-Forwarded-Proto=https'
+      - 'traefik.docker.network=traefik'
 
 networks:
   database:
