Reverte o código ao snapshot do commit 1fa4587 ([NORTHFLANK]) sem reescrever histórico

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,15 +21,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
   },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts",
-    "e2e/activate-mentor.e2e.spec.ts",
-    "e2e/authenticate-mentor.e2e.spec.ts",
-    "e2e/change-mentor-password.e2e.spec.ts",
-    "e2e/create-mentor.e2e.spec.ts",
-    "e2e/list-all-mentors.e2e.spec.ts"
-  ]
+  "include": ["src/**/*.ts", "test/**/*.ts", "e2e/activate-mentor.e2e.spec.ts", "e2e/authenticate-mentor.e2e.spec.ts", "e2e/change-mentor-password.e2e.spec.ts", "e2e/create-mentor.e2e.spec.ts", "e2e/list-all-mentors.e2e.spec.ts"]
 }
