--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   database_soujunior:
@@ -15,7 +15,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data/pgdata
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U docker -d mentores_backend']
+      test: ["CMD-SHELL", "pg_isready -U docker -d mentores_backend"]
       interval: 5s
       timeout: 5s
       retries: 5
