--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^6.3.0",
-    "@prisma/client": "^6.15.0",
     "@swc/core": "^1.9.2",
+    "@types/cron": "^2.0.1",
+    "@vitest/coverage-v8": "^2.1.4",
     "aws-sdk": "^2.1462.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -48,7 +51,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "unplugin-swc": "^1.5.1"
+    "unplugin-swc": "^1.5.1",
+    "vitest": "^2.1.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
@@ -57,9 +61,10 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@prisma/client": "^6.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.2.4",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/passport-jwt": "^3.0.8",
@@ -67,8 +72,6 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@vitest/coverage-v8": "^2.1.4",
-    "vitest": "^2.1.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
@@ -77,7 +80,7 @@
     "husky": "^8.0.3",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "prisma": "^6.15.0",
+    "prisma": "^6.6.0",
     "source-map-support": "^0.5.20",
     "supertest": "^7.0.0",
     "ts-jest": "29.0.3",
@@ -93,7 +96,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": "..spec.ts$",
     "coverageThreshold": {
       "global": {
         "branches": 85,
@@ -103,13 +106,16 @@
       }
     },
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    }
   },
   "pre-push": [
     "test:cov"
@@ -120,3 +126,4 @@
     }
   }
 }
+
